--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,6 @@ logs/
 npm-debug.log
 yarn-error.log
 node_modules/
-package-lock.json
-yarn.lock
 coverage/
 .idea/
 run/
@@ -12,3 +10,5 @@ run/
 *.un~
 typings/
 .nyc_output/
+package-lock.json
+!yarn.lock
